--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ body {
     text-align: center;
     background-color: #f4f4f4;
     max-width: 80%;
-    margin: auto;
+    margin-right: 10%;
+    margin-left: 10%;
 }
 
 .game {
