--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,135 @@
+:root {
+    --primary-color-1: rgb(232, 82, 82);
+    --primary-color-2: rgb(187, 37, 37);
+    --primary-color-3: #333;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
+    font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+/* Header Styling */
+header {
+    background: linear-gradient( var(--primary-color-2), var(--primary-color-1));
+    color: white;
+    padding: 20px 40px;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    opacity: 0.9;
+}
+
+header h1 {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin: 5px 0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+header h2 {
+    font-size: 1.2em;
+    margin-top: 2px;
+    font-weight: 300;
+    opacity: 0.9;
+}
+
+header p {
+    font-size: 0.9em;
+    margin-top: 5px;
+    opacity: 0.8;
+}
+
+
+
+/* Background Info Styling */
+article {
     max-width: 80%;
-    margin-right: 10%;
-    margin-left: 10%;
 }
 
+@media screen and (min-width: 900px) {
+    article {max-width: 750px;}
+}
+
+article p {
+    font-size: 1em;
+    line-height: 1.75;
+}
+
+
+/* Game Styling */
 .game {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
-#result {
-    font-size: 1.5em;
-    margin: 20px;
+.choices {
+    margin-bottom: 50px;
 }
 
 .choice {
     max-width: 300px;
     max-height: 300px;
+    object-fit: contain;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+    margin: 0 20px;
+
 }
 
 .choice:hover {
     transform: scale(1.1);
+} 
+
+
+/* Result Styling */
+#result {
+    font-size: 1.5em;
+    margin: 50px;
+    line-height: 1.5;
+    color: var(--primary-color-3);
+}
+
+/* Play Again Button Styling */
+button {
+    padding: 15px 30px;
+    font-size: 1.2em;
+    background-color: var(--primary-color-1);
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: var(--primary-color-2);
+}
+
+/* Footer Styling */
+footer {
+    background-color: #333;
+    color: white;
+    width: 100%;
+    bottom: 0;
+    text-align: center;
+    margin-top: 50px;
+}
+
+footer a {
+    color: var(--primary-color-1);
+}
+
+footer a:hover {
+    color: var(--primary-color-2);
 }
